--- a/featuresorsmthnidno/filteringiskindacool/CSS/styles.css
+++ b/featuresorsmthnidno/filteringiskindacool/CSS/styles.css
@@ -4,25 +4,39 @@
 
 .filterDiv {
   float: left;
-  background-color: #2196F3;
-  color: #ffffff;
+  background-color: lightgray;
+  color: black;
   width: 150px;
   line-height: 120px;
   text-align: center;
-  margin: 2px;
+  margin: 5px;
+  margin-bottom: 20px;
   display: none; /* Hidden by default */
 }
 
 /* The "show" class is added to the filtered elements */
 .show {
   display: block;
+  outline: 1px solid #0198fa;
+  padding: 20px 20px;
+  border: 5px solid transparent;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.show:hover {
+  outline: 0px solid transparent;
+  padding: 20px 20px;
+  border: 5px solid #0198fa;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 /* Style the buttons */
 .btn {
   border: none;
   outline: none;
-  padding: 12px 16px;
+  padding: 15px 15px;
   background-color: #f1f1f1;
   cursor: pointer;
 }
