--- a/Assignmenttemp/assets/whippage/css/wstyles.css
+++ b/Assignmenttemp/assets/whippage/css/wstyles.css
@@ -57,3 +57,33 @@
 .wbtn:hover {
   background: #fff;
 }
+
+.filterDiv {
+	display: none;
+}
+
+.show {
+	display: block;
+}
+
+#myBtnContainer {
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+}
+.fbtn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+.fbtn:hover {
+  background-color: #ddd;
+}
+
+.fbtn.active {
+  background-color: #666;
+  color: white;
+}
