--- a/Assignmenttemp/assets/whippage/css/wstyles.css
+++ b/Assignmenttemp/assets/whippage/css/wstyles.css
@@ -67,23 +67,76 @@
 }
 
 #myBtnContainer {
+	width: 50%;
+    display: flex;
 	margin-left: auto;
 	margin-right: auto;
-	text-align: center;
+	text-align: justify;
 }
+
 .fbtn {
-  border: none;
-  outline: none;
-  padding: 12px 16px;
-  background-color: #f1f1f1;
+  width: 150px;
+  height: 50px;
+  border: 1px solid black;
+  font-family: 'Cinzel', serif;
+  font-size: 20px;
   cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  z-index: 0;
+  transition: 1s;
+  margin: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+
+}
+
+.fbtn::before, .fbtn::after {
+  position: absolute;
+  background: white;
+  z-index: -1;
+  transition: 1s;
+  content: '';
+}
+
+.fbtn::before {
+  height: 50px;
+  width: 130px;
+}
+
+.fbtn::after {
+  width: 150px;
+  height: 30px;
+}
+
+.fnoselect {
+  -webkit-touch-callout: none;
+    -webkit-user-select: none;
+     -khtml-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
+}
+
+.fbtn:hover::before {
+  width: 0px;
+  background: white;
+}
+
+.wbtn:hover::after {
+  height: 0px;
+  background: #fff;
 }
 
 .fbtn:hover {
-  background-color: #ddd;
+  background: #D4AF37;
 }
 
-.fbtn.active {
-  background-color: #666;
-  color: white;
+.fbtn:focus, .fbtn:active {
+	background-color: #D4AF37;
+	border: 1px solid black;
 }
