--- a/Assignmenttemp/assets/mobirise/css/mbr-additional.css
+++ b/Assignmenttemp/assets/mobirise/css/mbr-additional.css
@@ -485,6 +485,9 @@ body {
 .text-black {
   color: #232323 !important;
 }
+.text-gold {
+    color: #D4AF37 !important;
+}
 a.text-primary:hover,
 a.text-primary:focus,
 a.text-primary.active {
