--- a/newtry/public/assets/mobirise/css/mbr-additional.css
+++ b/newtry/public/assets/mobirise/css/mbr-additional.css
@@ -488,6 +488,9 @@ body {
 .text-gold {
     color: #D4AF37 !important;
 }
+.text-gray {
+  color: #D3D5CF !important;
+}
 a.text-primary:hover,
 a.text-primary:focus,
 a.text-primary.active {
